fix: Reduce gap in main controls for improved layout; bump version to 9.35.12

--- a/main/src/css/views.css
+++ b/main/src/css/views.css
@@ -1112,7 +1112,7 @@ body.hide-search-bars .playlist-search-bar {
 
 .main-controls {
     display: flex;
-    gap: 100px;
+    gap: 25px;
     justify-content: center;
 }
 
